# LR_1

./: CMakeLists.txt
files/: avg.json  debt.json  group.json  meta.json  name.json
include/: json.hpp  student.hpp
sources/: json.cpp  student.cpp
tests/: test.cpp
